// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Header unit tests should match the snapshot 1`] = `
<header>
  <Link
    to="/"
  >
    <h1
      className="cccr-header"
    >
      The Center for CosmiCat Research
    </h1>
  </Link>
  <Link
    to="/evidence"
  >
    <button
      className="evidence-btn"
      type="button"
    >
      Evidence
    </button>
  </Link>
  <div
    className="icon-div"
  >
    <img
      alt="small green alien icon"
      className="icon"
      src="alien.svg"
    />
    <img
      alt="small green cat icon"
      className="icon"
      src="cat.svg"
    />
  </div>
</header>
`;

exports[`Header Header unit tests should match the snapshot when there is a user in props 1`] = `
<header>
  <Link
    to="/"
  >
    <h1
      className="cccr-header"
    >
      The Center for CosmiCat Research
    </h1>
  </Link>
  <div
    className="user-name-div"
  >
    <h2
      className="header-h2"
    >
      Welcome Dr. 
      Davey Havok
    </h2>
    <Link
      to="/"
    >
      <button
        className="signout-btn"
        onClick={[Function]}
      >
        Sign Out
      </button>
    </Link>
  </div>
  <Link
    to="/evidence"
  >
    <button
      className="evidence-btn"
      type="button"
    >
      Evidence
    </button>
  </Link>
  <div
    className="icon-div"
  >
    <img
      alt="small green alien icon"
      className="icon"
      src="alien.svg"
    />
    <img
      alt="small green cat icon"
      className="icon"
      src="cat.svg"
    />
  </div>
</header>
`;
